package CarSharing.provided;
/**
 * Enumeration of all the states a trip can have.<br>
 * 
 * * 
 *  @ProgrammingProblem.Hint provided
 */
public enum TripStatus {

    CREATED, STARTED, COMPLETED;

}
